all company side frontend

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,14 @@
-#logoutIcon{
- color: red;
+/* /Pages/CompanySalesHistory */
+#comSalesHisTable {
+  display: flex;
+}
+
+#comSalesHisThead .comSalesHisTr, #comSalesHisTbody .comSalesHisTr {
+  display: inline-flex;
+  flex-direction:column;
+}
+
+/* /Pages/CompanySalesSummary */
+#comSalesSumWelcome{
+  font-size: 13px;
 }
