--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,3 +1,5 @@
+@import "./styles/partials";
+
 /* /Pages/CompanySalesHistory */
 #comSalesHisTable {
   display: flex;
@@ -65,3 +67,40 @@
 } 
 
 
+
+/* Customer Show Service */
+.toastNoticeShowService {
+  opacity: 0.8;
+  width: 200px;
+  height: 150px;
+}
+
+#addcartmessageser {
+  font-size: 17px;
+  color: rgba(95, 92, 92, 0.624);
+}
+
+.addcarticon {
+  font-size: 30px;
+  color: rgba(95, 92, 92, 0.624);
+}
+
+/* making toast on the top layer */
+#cusShowServiceContainer {
+  position: relative;
+}
+
+#cusShowServiceBottomLayer,
+#cusShowServiceTopLayer {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+#cusShowServiceTopLayer {
+  z-index: 10;
+  position: absolute;
+  transform: translate(50%,50%);
+} 
