show company navbar image and name

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -104,3 +104,12 @@
   position: absolute;
   transform: translate(50%,50%);
 } 
+
+
+// Company Navbar
+.NavBarIcon {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+
+}
