--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -113,3 +113,33 @@
   border-radius: 50%;
 
 }
+
+
+//customer cart
+.overlayCartMessage{
+  position: fixed;
+  top: 30%;
+  left: 35%;
+  height: 20%;
+  width: 20%;
+  z-index: 10;
+  background-color: rgba(111, 108, 108, 0.5);
+  border-bottom-left-radius: 10%;
+  border-bottom-right-radius: 10%;
+  border-top-left-radius: 10%;
+  border-top-right-radius: 10%;
+   /*dim the background*/
+}
+
+#overlayCartMessageText{
+  font-size: 20px;
+}
+
+.overlayCartMessageIcon{
+font-size: 28px;
+}
+
+#emptyCartPic{
+  height: 200px;
+  width: 200px;
+}
