--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -14,8 +14,8 @@
 }
 
 //font
-p{
-  font-family: 'Nunito Sans', sans-serif;
+.fontNormal {
+  font-family: 'Baloo 2', cursive;
 }
 
 
@@ -133,15 +133,16 @@ p{
 .overlayCartMessage {
   position: fixed;
   top: 30%;
-  left: 35%;
-  height: 20%;
-  width: 20%;
+  left: 40%;
+  height: 15%;
+  width: 15%;
   z-index: 10;
-  background-color: rgba(111, 108, 108, 0.5);
-  border-bottom-left-radius: 10%;
-  border-bottom-right-radius: 10%;
-  border-top-left-radius: 10%;
-  border-top-right-radius: 10%;
+  color: rgba(63, 61, 61, 0.658);
+  background-color: rgba(197, 191, 191, 0.353);
+  border-bottom-left-radius: 5%;
+  border-bottom-right-radius: 5%;
+  border-top-left-radius: 5%;
+  border-top-right-radius: 5%;
   /*dim the background*/
 }
 
@@ -172,4 +173,24 @@ p{
   color: rgb(93, 79, 108);
 }
 
-//company sales summary
+//customer payment success
+#luckyDrawIconBtn{
+  color: rgba(81, 12, 81, 0.42);
+}
+
+
+@media (prefers-reduced-motion: no-preference) {
+  #paymentSuccessImg {
+    animation: App-paymentSuccess-spin infinite 0.3s linear;
+  }
+}
+
+@keyframes App-paymentSuccess-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
