customer show company page

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -242,3 +242,9 @@
   display: flex;
   justify-content: start;
 }
+
+//Show Company Product Detail
+.showComDetailProductImg {
+  height: "150px";
+  width: "150px";
+}
