--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -10,7 +10,13 @@
 }
 
 .rmLinkStyleClose {
+  text-decoration: none;
   color: grey;
+}
+
+.rmLinkStyleBlack {
+  text-decoration: none;
+  color: black;
 }
 
 .FaEthereumIcon {
